--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -55,7 +55,10 @@
       "popular": "Popular",
       "beach": "Beach",
       "cheap": "Cheap",
-      "expensive": "Expensive"
+      "expensive": "Expensive",
+      "mountain": "Mountain",
+      "road":"Road",
+      "city":"City"
     },
     "sections": {
       "recommended": "Recommended for you",
